tests/baselines/reference/incorrectArrowFunction.errors.txt
tests/cases/compiler/incorrectArrowFunction.ts(7,9): error TS17018: Arrow functions are not syntactically valid here. Consider wrapping the function in parentheses.
tests/cases/compiler/incorrectArrowFunction.ts(8,9): error TS17018: Arrow functions are not syntactically valid here. Consider wrapping the function in parentheses.
tests/cases/compiler/incorrectArrowFunction.ts(9,9): error TS17018: Arrow functions are not syntactically valid here. Consider wrapping the function in parentheses.
tests/cases/compiler/incorrectArrowFunction.ts(10,9): error TS17018: Arrow functions are not syntactically valid here. Consider wrapping the function in parentheses.
tests/cases/compiler/incorrectArrowFunction.ts(11,9): error TS17018: Arrow functions are not syntactically valid here. Consider wrapping the function in parentheses.
tests/cases/compiler/incorrectArrowFunction.ts(12,9): error TS17018: Arrow functions are not syntactically valid here. Consider wrapping the function in parentheses.
tests/cases/compiler/incorrectArrowFunction.ts(13,9): error TS17018: Arrow functions are not syntactically valid here. Consider wrapping the function in parentheses.
tests/cases/compiler/incorrectArrowFunction.ts(14,9): error TS17018: Arrow functions are not syntactically valid here. Consider wrapping the function in parentheses.
tests/cases/compiler/incorrectArrowFunction.ts(15,9): error TS17018: Arrow functions are not syntactically valid here. Consider wrapping the function in parentheses.
tests/cases/compiler/incorrectArrowFunction.ts(16,9): error TS17018: Arrow functions are not syntactically valid here. Consider wrapping the function in parentheses.


==== tests/cases/compiler/incorrectArrowFunction.ts (10 errors) ====
    declare const foo;
    
    interface Foo {
        a: number
    }
    
    true || () => 1;
            ~~~~~~~
!!! error TS17018: Arrow functions are not syntactically valid here. Consider wrapping the function in parentheses.
    true || a => 1;
            ~~~~~~
!!! error TS17018: Arrow functions are not syntactically valid here. Consider wrapping the function in parentheses.
    true || a => b => 1;
            ~~~~~~~~~~~
!!! error TS17018: Arrow functions are not syntactically valid here. Consider wrapping the function in parentheses.
    true || (a) => 2;
            ~~~~~~~~
!!! error TS17018: Arrow functions are not syntactically valid here. Consider wrapping the function in parentheses.
    true || foo => 1;
            ~~~~~~~~
!!! error TS17018: Arrow functions are not syntactically valid here. Consider wrapping the function in parentheses.
    true || (a: number) => 1;
            ~~~~~~~~~~~~~~~~
!!! error TS17018: Arrow functions are not syntactically valid here. Consider wrapping the function in parentheses.
    true || ({ a }: Foo) => 1;
            ~~~~~~~~~~~~~~~~~
!!! error TS17018: Arrow functions are not syntactically valid here. Consider wrapping the function in parentheses.
    true || async() => 1;
            ~~~~~~~~~~~~
!!! error TS17018: Arrow functions are not syntactically valid here. Consider wrapping the function in parentheses.
    true || async a => 1;
            ~~~~~~~~~~~~
!!! error TS17018: Arrow functions are not syntactically valid here. Consider wrapping the function in parentheses.
    true || async => 1;
            ~~~~~~~~~~
!!! error TS17018: Arrow functions are not syntactically valid here. Consider wrapping the function in parentheses.
    
    true || (() => 1);
    true || (a => 1);
    true || ((a) => 2);
    true || (foo => 1);
    true || ((a: number) => 1);
    true || (({ a }: Foo) => 1);
    true || (async () => 1);
    true || (async a => 1);
    true || (async => 1);
    (() => 1) || (() => 2);
    
    true || (false);
    true || false;
    true || foo;
    